Added language Support Files

--- a/mobile/src/main/res/layout/activity_login.xml
+++ b/mobile/src/main/res/layout/activity_login.xml
@@ -40,5 +40,6 @@
     android:layout_height="wrap_content"
     android:layout_alignEnd="@+id/password"
     android:layout_alignParentBottom="true"
+    android:layout_alignParentEnd="true"
     android:text="Sign In"/>
 </RelativeLayout>
