Login / SignUp flow completed

--- a/mobile/src/main/res/layout/activity_login.xml
+++ b/mobile/src/main/res/layout/activity_login.xml
@@ -27,7 +27,7 @@
     android:inputType="textPassword"/>
 
   <Button
-    android:id="@+id/button_sign_up"
+    android:id="@+id/button_login_sign_up"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
