--- a/mobile/src/main/res/layout/activity_sign_up.xml
+++ b/mobile/src/main/res/layout/activity_sign_up.xml
@@ -37,7 +37,7 @@
     android:inputType="textEmailAddress"/>
 
   <Button
-    android:id="@+id/button_sign_up"
+    android:id="@+id/button_login_sign_up"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
