--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -1,5 +1,9 @@
 <resources>
-  <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-    <!-- Customize your theme here. -->
+
+  <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
+    <item name="colorPrimary">#3FB155</item>
+    <item name="colorPrimaryDark">#309F3F</item>
+    <item name="colorAccent">#FF4081</item>
   </style>
+
 </resources>
