--- a/mobile/src/main/res/layout/activity_login.xml
+++ b/mobile/src/main/res/layout/activity_login.xml
@@ -26,20 +26,26 @@
     android:hint="@string/password_hint"
     android:inputType="textPassword"/>
 
-  <Button
-    android:id="@+id/button_login_sign_up"
-    android:layout_width="wrap_content"
+  <LinearLayout
+    style="?android:buttonBarButtonStyle"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     android:layout_alignParentStart="true"
+    android:orientation="horizontal">
+
+    <Button
+    android:id="@+id/button_login_sign_up"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
     android:text="@string/sign_up"/>
 
   <Button
     android:id="@+id/button_sign_in"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_alignEnd="@+id/password"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentEnd="true"
+    android:layout_weight="1"
     android:text="@string/sign_in"/>
+  </LinearLayout>
 </RelativeLayout>
