--- a/mobile/src/main/res/layout/activity_sign_up.xml
+++ b/mobile/src/main/res/layout/activity_sign_up.xml
@@ -36,12 +36,19 @@
     android:hint="@string/email_hint"
     android:inputType="textEmailAddress"/>
 
-  <Button
-    android:id="@+id/button_login_sign_up"
-    android:layout_width="fill_parent"
+  <LinearLayout
+    style="?android:buttonBarButtonStyle"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     android:layout_alignParentStart="true"
+    android:orientation="horizontal">
+  <Button
+    android:id="@+id/button_login_sign_up"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
     android:gravity="center"
     android:text="@string/sign_up_btn_lbl"/>
+  </LinearLayout>
 </RelativeLayout>
