--- a/mobile/src/main/res/menu/menu_main.xml
+++ b/mobile/src/main/res/menu/menu_main.xml
@@ -1,4 +1,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".MainActivity">
 
@@ -12,5 +13,10 @@
     android:orderInCategory="200"
     android:title="@string/action_settings"/>
 
-
+  <item
+    android:id="@+id/action_search"
+    android:icon="@drawable/ic_action_search"
+    android:orderInCategory="100"
+    app:actionViewClass="android.support.v7.widget.SearchView"
+    app:showAsAction="always"/>
 </menu>
