--- a/mobile/src/main/res/layout/activity_login.xml
+++ b/mobile/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
     android:hint="@string/password_hint"
     android:inputType="textPassword"/>
 
-  <LinearLayout
+  <RelativeLayout
     style="?android:buttonBarButtonStyle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -34,18 +34,63 @@
     android:layout_alignParentStart="true"
     android:orientation="horizontal">
 
-    <Button
-    android:id="@+id/button_login_sign_up"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_weight="1"
-    android:text="@string/sign_up"/>
+    <LinearLayout
+      android:id="@+id/login_layout"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:layout_alignParentLeft="true"
+      android:orientation="horizontal">
 
-  <Button
-    android:id="@+id/button_sign_in"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_weight="1"
-    android:text="@string/sign_in"/>
-  </LinearLayout>
+      <Button
+        android:id="@+id/button_login_sign_up"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_weight="1"
+        android:text="@string/sign_up"/>
+
+      <Button
+        android:id="@+id/button_sign_in"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/button_login_sign_up"
+        android:layout_weight="1"
+        android:text="@string/sign_in"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+      android:id="@+id/social_layout"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:layout_alignParentStart="true"
+      android:layout_marginTop="32sp"
+      android:layout_below="@id/login_layout"
+      android:orientation="horizontal">
+
+      <Button
+        android:id="@+id/button_facebook"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Facebook"/>
+
+      <Button
+        android:id="@+id/button_google_plus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Google+"/>
+
+      <Button
+        android:id="@+id/button_twitter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Twitter"/>
+    </LinearLayout>
+  </RelativeLayout>
 </RelativeLayout>
